RESOLVED FIXED286831
An infinite loop happens when drawing wavy underline for small text at a very large x-position
https://bugs.webkit.org/show_bug.cgi?id=286831
Summary An infinite loop happens when drawing wavy underline for small text at a very...
Said Abou-Hallawa
Reported 2025-01-31 15:16:28 PST
Created attachment 474082 [details] test case (Will jetsam) Open the attached text case. Result: WebKit enters an infinite loop and eventually it jetsams. This happens because of floating point precision. If a float which is greater than 2^23 is added to a fraction which is less than 0.5, the result will be equal to the large number and the fraction will be dropped. float x = 10000000; float step = 0.2; float y = x + step; // y will be equal to x;
Attachments
test case (Will jetsam) (284 bytes, text/html)
2025-01-31 15:16 PST, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2025-01-31 15:17:20 PST
Said Abou-Hallawa
Comment 2 2025-01-31 15:29:31 PST
EWS
Comment 3 2025-01-31 21:59:50 PST
Committed 289659@main (8cf800b33c66): <https://commits.webkit.org/289659@main> Reviewed commits have been landed. Closing PR #39837 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.